BAT-3 finished client management